<?xml version="1.0"?>
<package format="3">
  <name>poly_lib</name>
  <version>0.0.0</version>
  <description>Polynomial and Spline Library for ROS2</description>
  <maintainer email="yuweiwu@seas.upenn.edu">Yuwei Wu</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>Eigen3</depend>
  <depend>traj_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
