<?xml version="1.0"?>
<package format="3">
  <name>poly_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 wrapper for poly_lib</description>

  <maintainer email="yuweiwu@seas.upenn.edu">Yuwei Wu</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>

  <!-- Run dependencies -->
  <exec_depend>rclcpp</exec_depend>

  <!-- If poly_lib is installed as system package, you can add find_dependency here -->
  <!-- Otherwise, poly_lib is handled via add_subdirectory in CMakeLists -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
